; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_tty.c_ttypend.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_tty.c_ttypend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty = type { i32, %struct.clist, i32 }
%struct.clist = type { i32*, i32, i64 }

@PENDIN = common dso_local global i32 0, align 4
@TS_TYPEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tty*)* @ttypend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ttypend(%struct.tty* %0) #0 {
  %2 = alloca %struct.tty*, align 8
  %3 = alloca %struct.clist, align 8
  %4 = alloca i32, align 4
  store %struct.tty* %0, %struct.tty** %2, align 8
  %5 = load %struct.tty*, %struct.tty** %2, align 8
  %6 = call i32 @TTY_LOCK_OWNED(%struct.tty* %5)
  %7 = load %struct.tty*, %struct.tty** %2, align 8
  %8 = getelementptr inbounds %struct.tty, %struct.tty* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 8
  %10 = load i32, i32* @PENDIN, align 4
  %11 = call i32 @CLR(i32 %9, i32 %10)
  %12 = load %struct.tty*, %struct.tty** %2, align 8
  %13 = getelementptr inbounds %struct.tty, %struct.tty* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = load i32, i32* @TS_TYPEN, align 4
  %16 = call i32 @SET(i32 %14, i32 %15)
  %17 = load %struct.tty*, %struct.tty** %2, align 8
  %18 = getelementptr inbounds %struct.tty, %struct.tty* %17, i32 0, i32 1
  %19 = bitcast %struct.clist* %3 to i8*
  %20 = bitcast %struct.clist* %18 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %19, i8* align 8 %20, i64 24, i1 false)
  %21 = load %struct.tty*, %struct.tty** %2, align 8
  %22 = getelementptr inbounds %struct.tty, %struct.tty* %21, i32 0, i32 1
  %23 = getelementptr inbounds %struct.clist, %struct.clist* %22, i32 0, i32 2
  store i64 0, i64* %23, align 8
  %24 = load %struct.tty*, %struct.tty** %2, align 8
  %25 = getelementptr inbounds %struct.tty, %struct.tty* %24, i32 0, i32 1
  %26 = getelementptr inbounds %struct.clist, %struct.clist* %25, i32 0, i32 0
  store i32* null, i32** %26, align 8
  %27 = load %struct.tty*, %struct.tty** %2, align 8
  %28 = getelementptr inbounds %struct.tty, %struct.tty* %27, i32 0, i32 1
  %29 = getelementptr inbounds %struct.clist, %struct.clist* %28, i32 0, i32 1
  store i32 0, i32* %29, align 8
  br label %30

30:                                               ; preds = %33, %1
  %31 = call i32 @getc(%struct.clist* %3)
  store i32 %31, i32* %4, align 4
  %32 = icmp sge i32 %31, 0
  br i1 %32, label %33, label %37

33:                                               ; preds = %30
  %34 = load i32, i32* %4, align 4
  %35 = load %struct.tty*, %struct.tty** %2, align 8
  %36 = call i32 @ttyinput(i32 %34, %struct.tty* %35)
  br label %30

37:                                               ; preds = %30
  %38 = load %struct.tty*, %struct.tty** %2, align 8
  %39 = getelementptr inbounds %struct.tty, %struct.tty* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 8
  %41 = load i32, i32* @TS_TYPEN, align 4
  %42 = call i32 @CLR(i32 %40, i32 %41)
  ret void
}

declare dso_local i32 @TTY_LOCK_OWNED(%struct.tty*) #1

declare dso_local i32 @CLR(i32, i32) #1

declare dso_local i32 @SET(i32, i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @getc(%struct.clist*) #1

declare dso_local i32 @ttyinput(i32, %struct.tty*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
